# claude-rpg

./: .gitignore  .goosehints  AI_IMPLEMENTATION_SUMMARY.md  AI_MODEL_SELECTION_FEATURE.md  AI_NPC_IMPLEMENTATION_GUIDE.md  AI_NPC_SYSTEM_COMPLETE.md  AI_NPC_USAGE_GUIDE.md  AUDIO_ATTRIBUTION.md  BUILDING_EDITOR_COMPARISON.md  CLEAN_MCP_SETUP_COMPLETE.md  COMPLETE_RANGED_WEAPON_SYSTEM.md  DEVELOPMENT_SUMMARY.md  DIRECTORY_FIX.md  ENHANCED_BUILDING_EDITOR_README.md  ENHANCED_EDITOR_SUMMARY.md  ENHANCED_SETTLEMENTS_COMPLETE.md  ENHANCED_SETTLEMENT_SUMMARY.md  FINAL_CLEAN_MCP_SETUP.md  FINAL_NPC_FIX_SUMMARY.md  FINAL_RANGED_WEAPON_STATUS.md  FINAL_SUCCESS_SUMMARY.md  FIRST_INTERACTION_FIX.md  GOOSE_CLI_USAGE_UPDATE.md  HAS_SHOP_ATTRIBUTE_FIXED.md  HTTP_MCP_PLAN.md  HTTP_MCP_SUCCESS.md  IMPROVED_SESSION_TIMING.md  IMPROVEMENTS_SUMMARY.md  INTEGER_TILE_MOVEMENT_PLAN.md  INTEGER_TILE_MOVEMENT_STATUS.md  INTEGRATION_GUIDE.md  KNOWN_ISSUES.md  LICENSE  MAP_TEMPLATE_SYSTEM.md  MCP_INTEGRATION_GUIDE.md  MCP_PATH_FIXED.md  MCP_REMOTE_SOLUTION.md  MCP_SETUP_FIXED.md  MCP_SUCCESS_FINAL.md  MCP_SUCCESS_FINAL_WORKING.md  (+109 more)
building_templates/: New Building.json  general_shop.json  large_house.json  small_house.json  village_blacksmith.json  village_inn.json
recipes/: README.md  blacksmith.yaml  blacksmith.yaml.backup  caravan_master.yaml  caravan_master.yaml.backup  forest_ranger.yaml  forest_ranger.yaml.backup  friendly_merchant.yaml  friendly_merchant.yaml.backup  guard_captain.yaml  guard_captain.yaml.backup  healer.yaml  healer.yaml.backup  innkeeper.yaml  innkeeper.yaml.backup  master_blacksmith.yaml  master_herbalist.yaml  master_herbalist.yaml.backup  master_merchant.yaml  master_merchant.yaml.backup  master_smith.yaml  master_smith.yaml.backup  mysterious_wizard.yaml  tavern_keeper.yaml  (+5 more)
(+156 files in other folders)
