[project]
name = "claude-rpg"
version = "0.1.0"
description = "A classic isometric RPG game inspired by Fallout 1, Arcanum, and X-COM: UFO Defense"
authors = [
    {name = "Claude RPG Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5.0",
]

[project.scripts]
claude-rpg = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []