[project]
name = "goose-rpg"
version = "0.1.0"
description = "A classic isometric RPG game inspired by Fallout 1, Arcanum, and X-COM: UFO Defense"
authors = [
    {name = "Goose RPG Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
goose-rpg = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
