[project]
name = "goose-rpg"
version = "0.1.0"
description = "A classic isometric RPG game inspired by Fallout 1, Arcanum, and X-COM: UFO Defense"
authors = [
    {name = "Goose RPG Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.2",
    "pygame>=2.5.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pillow>=11.2.1",
]

[project.scripts]
goose-rpg = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
